--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,13 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+*.png
+*.tex
+*.log
+*.fls
+*.aux
+*fdb*
+*.toml
+*.lock
+*.python-version
+*.swp
